@@ -2,9 +2,10 @@ package com.aapeli.client;
 
 import com.aapeli.colorgui.ColorButton;
 import java.awt.Color;
+import java.awt.Desktop;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
-import java.net.URL;
+import java.net.URI;
 import java.security.MessageDigest;
 
 class TellFriendHandler implements ActionListener {
@@ -29,9 +30,7 @@ class TellFriendHandler implements ActionListener {
 
         try {
             this.aMessageDigest1503 = MessageDigest.getInstance("MD5");
-        } catch (Exception var5) {
-            this.anInt1506 = 0;
-        } catch (Error var6) {
+        } catch (Exception | Error e) {
             this.anInt1506 = 0;
         }
 
@@ -121,11 +120,10 @@ class TellFriendHandler implements ActionListener {
             }
 
             var10 = var10 + "hash=" + var9;
-            URL var14 = new URL(this.aString1504 + "?" + var10);
-            this.aParameters1500.getAppletContext().showDocument(var14, this.aString1505);
+            URI uri = new URI(this.aString1504 + "?" + var10);
+            Desktop.getDesktop().browse(uri);
             return true;
-        } catch (Exception var12) {
-        } catch (Error var13) {
+        } catch (Exception | Error e) {
         }
 
         return false;
@@ -137,7 +135,7 @@ class TellFriendHandler implements ActionListener {
 
     private void method1704() {
         this.tellFriendWindow = new TellFriendWindow(this.aTextManager1501, this.anImageManager1502, this);
-        this.tellFriendWindow.method241(this.aParameters1500.getApplet());
+        this.tellFriendWindow.method241(this.aParameters1500.getRootComponent());
         this.anInt1506 = 2;
     }
 
